[workspace]
members = ["crates/app", "crates/api", "crates/mktslib"]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Tyler Kruer"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
